# career-os-ai

./: .cursorrules  .env_example  .gitignore  .pre-commit-config.yaml  README.md  perplexity_response.json  pyproject.toml
.github/: copilot-instructions.md
src/: cache.py  config.py  logger.py  main.py
src/agents/company_research/: company_early_stage_validator.py  company_fit_validator.py  company_icp_fit_validator.py  company_info_extractor.py  company_quick_screener.py  company_surface_researcher.py  company_web_researcher.py  early_stage_validator.py
src/agents/copywriting/: brand_voice.md  brand_voice_text_editor.py
src/agents/job_discovery/: job_ad_extractor.py
src/agents/job_opportunities/: job_ad_extractor.py  job_ad_ingestor.py  job_ads_scraper.py
src/convex/: client.py
src/flows/: research_company.py
src/llm/: factory.py  interface.py
src/llm/providers/: openai.py
src/llms/: factory.py  interface.py
src/llms/providers/: __init__.py  openai.py
src/models/company/: __init__.py  company.py  company_founding_year.py  company_funding.py  company_info.py  company_location.py  description.py  founders.py  founding_year.py  funding.py  growth_stage.py  industry.py
src/models/job/: __init__.py  job.py  job_details.py  job_location.py
src/schemas/: basic_response.py  company.py
src/services/llm/: factory.py  interface.py
src/services/scraper/: factory.py  interface.py
src/services/web_search/: factory.py  interface.py
src/utilities/: company.py  text.py  url.py
src/workflows/: company_research.py  job_discovery.py  research_company.py
tests/integration_tests/: test_job_discovery_to_company_research.py
tests/smoke_tests/convex/: test_client.py
tests/smoke_tests/flows/: test_research_company.py
tests/smoke_tests/models/: test_company.py
tests/smoke_tests/workflows/: test_company_research.py  (+1 more)
(+42 files in other folders)
