[tool.poetry]
name = "career-os-ai"
version = "0.1.0"
description = "AI/ML layer of Career OS project."
authors = ["Nerijus Masikonis <nerijus@masikonis.lt>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
pre-commit = "^4.0.1"
python = "^3.12"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
diskcache = "^5.6.3"
beautifulsoup4 = "^4.12.3"
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langgraph = "^0.2.61"
langchain-openai = "^0.2.14"
langchain-community = "^0.3.14"
langsmith = "^0.2.10"
modal = "^0.72.0"
pydantic = "^2.10.5"
tavily-python = "^0.5.0"
prefect = "^3.1.12"
pytz = "^2024.2"
convex = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
isort = "^5.13.2"
black = "^24.10.0"
pytest-asyncio = "^0.25.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "unit: mark a test as an unit test",
    "integration: mark a test as an integration test",
    "smoke: mark a test as a smoke test",
    "slow: marks tests that take longer to run"
]
asyncio_default_fixture_loop_scope = "function"
addopts = "--asyncio-mode=auto"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py312']  # Adjust this to your Python version
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
